# datalake-indexer

./: Cargo.toml  Dockerfile
src/: config.rs  file_data.rs  lib.rs  main.rs
src/utils/: aws.rs  datafusion.rs  mod.rs
