[package]
name = "datalake-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
datafusion = { version = "42", features = ["default"] }
arrow-json = "53"
parquet = "53"
aws-config = "1"
aws-sdk-s3 = "1"
aws-smithy-types = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.91"
uuid = { version = "1.11", features = ["v4"] }
chrono = "0.4"
anyhow = "1.0"